k8s/airflow/airflow-scheduler-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
  labels:
    app: airflow-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 50000
        runAsGroup: 50000
      containers:
        - name: airflow-scheduler
          image: apache/airflow:2.1.0
          imagePullPolicy: IfNotPresent
          resources:
          # lot cpu 245.84% from 2CPU
          # 181.6MiB / 2.931GiB
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          args: ["scheduler"]
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            privileged: false
          # livenessProbe:
          #   exec:
          #     command:
          #     - sh
          #     - -c
          #     - airflow jobs check --job-type SchedulerJob --hostname "${HOSTNAME}"
          #   initialDelaySeconds: 160
          #   periodSeconds: 20
