k8s/airflow/airflow-webserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
  labels:
    app: airflow-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 50000
        runAsGroup: 50000
      containers:
        - name: airflow-webserver
          image: apache/airflow:2.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
            # 923.8MiB / 2.931GiB
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          command: ["/bin/bash", "-c"]
          args: ["airflow db init && airflow webserver"]
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            privileged: false
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - curl --fail http://localhost:8080/health
            initialDelaySeconds: 60
            periodSeconds: 15
