k8s/airflow/airflow-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
  namespace: airflow
  labels:
    app: airflow-worker
spec:
  replicas: 1 # test 2
  selector:
    matchLabels:
      app: airflow-worker
  template:
    metadata:
      labels:
        app: airflow-worker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 50000
        runAsGroup: 50000
      containers:
        - name: airflow-worker
          image: apache/airflow:2.1.0
          imagePullPolicy: IfNotPresent
          resources:
          # 48.82% from 2CPU
          # 1.018GiB / 2.931Gi
            requests:
              cpu: 200m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
          args: ["celery", "worker"]
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            privileged: false
          # always fail
          # livenessProbe:
          #   exec:
          #     command:
          #     - sh
          #     - -c
          #     - celery --app airflow.executors.celery_executor.app inspect ping -d "celery@${HOSTNAME}"
          #   initialDelaySeconds: 60
          #   periodSeconds: 10
