k8s/airflow/flower-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-flower
  namespace: airflow
  labels:
    app: airflow-flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-flower
  template:
    metadata:
      labels:
        app: airflow-flower
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 50000
        runAsGroup: 50000
      containers:
        - name: airflow-flower
          image: apache/airflow:2.1.0
          imagePullPolicy: IfNotPresent
          resources:
          # 130.5MiB / 2.931GiB
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
          args: ["celery", "flower"]
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            privileged: false
          ports:
            - containerPort: 5555
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - curl --fail http://localhost:5555/ -u "${AIRFLOW__CELERY__FLOWER_BASIC_AUTH}"
            initialDelaySeconds: 60
            periodSeconds: 10
