k8s/airflow/postgres-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: psql-airflow
  namespace: airflow
  labels:
    app: psql-airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-airflow
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: psql-airflow
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1000
      containers:
        - name: psql-airflow
          image: postgres:13
          imagePullPolicy: IfNotPresent
          resources:
          # 35.08% from 2CPU scheduler demands
          # 86.98MiB / 2.931GiB
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            # - name: postgresdb
            #   mountPath: /var/lib/postgresql/data
            #   subPath: psql-data
            - name: scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        # - name: postgresdb
        #   persistentVolumeClaim:
        #     claimName: psql-airflow-pvc
        - name: scripts
          configMap:
            name: psql-scripts
            items:
            - key: 00-create-custom-user.sh
              path: 00-create-custom-user.sh
            - key: 01-create-custom-db.sh
              path: 01-create-custom-db.sh
            - key: 02-create-airflow-user.sh
              path: 02-create-airflow-user.sh
            - key: 03-create-airflow-db.sh
              path: 03-create-airflow-db.sh
            - key: 04-create-grafana-user.sh
              path: 04-create-grafana-user.sh
