k8s/airflow/rabbitmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-airflow
  namespace: airflow
  labels:
    app: rabbitmq-airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-airflow
  template:
    metadata:
      labels:
        app: rabbitmq-airflow
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      containers:
        - name: rabbitmq-airflow
          image: rabbitmq:3.8-management
          imagePullPolicy: IfNotPresent
          resources:
          # 115.6MiB / 2.931GiB
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            privileged: false
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
