k8s/airflow/airflow-webserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-svc
  namespace: airflow
  labels:
    app: airflow-webserver
spec:
  ports:
    - name: airflow-ui
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 32456
  selector:
    app: airflow-webserver
  type: NodePort
