k8s/airflow/flower-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airflow-flower
  name: flower-svc
  namespace: airflow
spec:
  ports:
    - name: flower
      port: 5555
      protocol: TCP
      targetPort: 5555
      nodePort: 32457
  selector:
    app: airflow-flower
  type: NodePort
