k8s/airflow/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: psql-airflow
  name: psql-svc
  namespace: airflow
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: psql-airflow
  type: ClusterIP
