k8s/airflow/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq-airflow
  name: rabbitmq-svc
  namespace: airflow
spec:
  ports:
    - name: queue
      port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: rabbitmq-airflow
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq-airflow
  name: rabbitmq-svc-external
  namespace: airflow
spec:
  ports:
    - name: management
      port: 15672
      protocol: TCP
      targetPort: 15672
      nodePort: 32458
  selector:
    app: rabbitmq-airflow
  type: NodePort
