k8s/airflow/flower-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flower-ingress
  namespace: airflow
spec:
  rules:
  - host: flower.feliux.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flower-svc
            port:
              number: 5555
