k8s/airflow/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: airflow
spec:
  rules:
  - host: rabbitmq.feliux.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-svc-external
            port:
              number: 15672
